compiler scan: mwg/std/{type_traits,tuple,utility}, mwg/{except.h,xprintf.h}, mwg/bio/{ttx2.h,tape.util.inl}:  bugfixes, suppress warnings.
src/Makefile.pp: require `all' on `check'.
src/Makefile.pp: Change order of compilation.
mwg/except.h (mwg::except::(copy constructor)): bugfix, modified to copy base class.
mwg/std/type_traits: Remove `mwg::stdm::add_reference' since a code using this function is not compatible with C++11.
mwg/std/type_traits: Rename `stdx::add_cref' to `stdx::add_const_reference'.
mwg/std/type_traits: bugfix, reorder the codes to correct the dependencies.
mwg/std/utility (mwg::stdm::forward (without rvalue references)): Use stdx::add_const_reference to avoid unintended substitution error in g++-3.4.6.
mwg/std/tuple.nonvariadic.hpp: Change the type of detail::is_tuple<>::size from `int' to `std::size_t' to suppress warnings.
mwg/xprintf.h: small modifications to suppress warnings.
mwg/bio/ttx2.h (mwg::bio::ttx_node::(copy constructor)): bugfix, modified to copy base class.
mwg/bio/tape.util.inl (operator| (when SFINAE overloads are not allowed)): bugfix, add inline.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-# will be generated
+# generated files
 /dist
 /out
-# /mmake/mcxx
 /src/Makefile
 
 # tests/temporaries
 /test
 .clang-completion-error
 /mmake/test
+
+# for edit
+/COMMIT
+
+# old codes not yet merged
+/src/mwgold
+/src/chkold
