mwg/std/chrono: \new mwg::stdm::chrono::{system,steady,high_resolution}_clock; mwg/string3/str.bench1.cpp
* string3/i001-bench1.cpp: i001-bench2.cpp を統合、実際に計測を行う様に書き換え。\rename -> string3/str.bench1.cpp.
* mwg/std/chrono: \new system_clock, steady_clock, high_resolution_clock (simple implementation with <ctime>).
* mwg/std/chrono: \new time_point::min, time_point::max
* mwg/std/chrono: \new operator-(time_point,time_point)
* mwg/std/chrono: \new common_type<time_point,time_point>
* mwg/std/chrono: C++14 constexpr functions.
* mwg/std/chrono: \new C++17 floor(duration), ceil(duration), round(duration), floor(time_point), ceil(time_point), round(time_point).
* mwg/std/chrono (mwg::stdm::duration): \remove non standard constructors.
* mwg/std/type_traits (mwg::stdm::common_type): support common types of arithmetic types.

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@
 /note/a.exe
 /note/a.obj
 
+/src/mwg/string3/*.o
+/src/mwg/string3/*.exe
+
 # user configurations
 /config.mk
 
 # tests/temporaries
-/test
 .clang-completion-error
+/test
 /mmake/test
 
 # for edit
