mwg/std/chrono: use POSIX clock_gettime() for high_resolution_clock

--- a/src/benchmark/Makefile
+++ b/src/benchmark/Makefile
@@ -14,17 +14,18 @@ CXX=$(MWGCXX)
 #CXXFLAGS += -I $(INS_INCDIR) -I $(INS_INCCFG) -O3
 CXXFLAGS += -I $(CPPDIR) -I $(CFGDIR)/include -O3
 CPPFLAGS = -MD -MF $(@:.o=.dep)
+LIBS = -lrt
 
 -include $(OBJDIR)/*.dep
 $(OBJDIR)/%.o: %.cpp | $(OBJDIR)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -o $@ $<
 
 str.bench1.exe: $(OBJDIR)/str.bench1.o
-	$(CXX) $(CXXFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^ $(LIBS)
 all: str.bench1.exe
 
 integer.nlz.bench1.exe: $(OBJDIR)/integer.nlz.bench1.o
-	$(CXX) $(CXXFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^ $(LIBS)
 all: integer.nlz.bench1.exe
 
 clean:
