benchmark/integer.nlz: update conditions for intrincs (2)

--- a/src/benchmark/Makefile
+++ b/src/benchmark/Makefile
@@ -23,6 +23,8 @@ endif
 
 ifeq ($(HOSTNAME),laguerre01.ph.sophia.ac.jp)
   CXXFLAGS += -DLAGUERRE
+else ifeq ($(HOSTNAME),padparadscha)
+  CXXFLAGS += -DPADPARADSCHA
 endif
 
 CPPFLAGS = -MD -MF $(@:.o=.dep)
