--- a/src/tool/Makefile
+++ b/src/tool/Makefile
@@ -3,20 +3,22 @@
 all: mwb/mwb$(EXEEXT)
 .PHONY: all
 
-CXX:=cxx -O3
-#CXX:=cxx -O3 -march=native
+CXX := g++ -O3
+#CXX:= g++ -O3 -march=native
 
-Makefile: Makefile.pp
-	mwg_pp.awk $< > $@
+BASE := ../..
+MWGPP := $(BASE)/mmake/mwg_pp.awk
+include $(BASE)/mmake/vars.mk
+CXXFLAGS := -I $(CPPDIR) -I $(CFGDIR)/include
+LDFLAGS := -L $(CFGDIR)
 
-#------------------------------------------------------------------------------
-# MWB
+Makefile: Makefile.pp | $(MWGPP)
+	$(MWGPP) $< > $@
 
-mwb/mwb_dump.o: mwb/mwb_dump.cpp
-	$(CXX) -c -o$@ $<
 mwb/mwb.o: mwb/mwb.cpp
-	$(CXX) -c -o$@ $<
-mwb/mwb$(EXEEXT): mwb/mwb.o mwb/mwb_dump.o
-	$(CXX) -o$@ $^ -lmwg
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+mwb/mwb_dump.o: mwb/mwb_dump.cpp
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
-#------------------------------------------------------------------------------
+mwb/mwb$(EXEEXT): mwb/mwb.o mwb/mwb_dump.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^ -lmwg
